fix overflow problems in message box

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .message {
+    display: flex;
+    flex-direction: column;
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
@@ -6,6 +8,8 @@
     color: white;
     min-height: max-content;
     font-family: "NotoSans";
+    max-width: 90%;
+    overflow-x: clip;
 }
 
 .sender-title {
@@ -50,6 +54,8 @@
     width: 100%;
     height: 600px;
     overflow-y: auto;
+    overflow-x: hidden;
+    flex-wrap: nowrap;
     display: flex;
     flex-direction: column;
     border-radius: 15px;
